kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nodeapp
  labels:
    run: nodeapp
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    run: nodeapp
